update design and content

--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@ A logic-based game using pure JavaScript</p>
                             <span> HTML</span>
                             <span> CSS</span>
                             <span> JavaScript</span>
+                            <span>Bootstrap</span>
                         </div>
                     
-                        <h3>Water Watch</h2>
-                        <p class="sub">A simple, responsive front-end project</p>
+                        <h3>Glam Pak</h2>
+                        <p class="sub">A modern, responsive fashion store frontend project</p>
                     
                         <div class="achievements">
                             <h4>What This Project Does</h4>
-                            <!-- <p>Displays basic water level information</p> -->
-                            <p>Fully responsive and mobile-friendly</p>
-                            <p>Clean UI built with pure HTML, CSS & JS</p>
+                            <p>Frontend customization & contact forms for user–designer interaction</p>
+                            <p>Browse dresses from multiple designers with interactive designer cards</p>
                         </div>
                     </div>
 
