Updated design and content

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ A logic-based game using pure JavaScript</p>
                     </div>
 
                     <div class="project-image">
-                        <img src="images/ecom.png" alt="Water Watch UI">
+                        <img src="images/ecom.png" alt="glam pak website">
                           <div class="overlay">
                             <a href="https://github.com/syeda221/GlamPak" class="btn-hover">GitHub</a>
                           </div>
