fix netlify form

--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,8 @@
 
                <h2 class="h2-2" style="margin-top: 30px;">Send a Message!</h2>
     <div class=" contact-form">
-        <form action="" name="contact" method="post" data-netlify="true">
+        <form action="" name="contact" method="POST" data-netlify="true">
+              <input type="hidden" name="form-name" value="contact">
             <div class="formm">
                 <div class="user-info">
                     <div class="form-group">
