--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Qunoot Zehra</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" type="image/png" href="images/favicon.ico">
+
     <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/simple-icons-font@v5/font/simple-icons.css"
