--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact me | Qunoot Zehra | Website Developer</title>
     <link rel="stylesheet" href="css/index.css">
+        <link rel="icon" type="image/png" href="images/favicon.ico">
+
+
     
 </head>
 <body>
