--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qunoot Zehra | Website Developer | Pakistan</title>
+    <link rel="preload" href="css/index.css" as="style" onload="this.rel='stylesheet'">
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" type="image/png" href="images/favicon.ico">
 
