--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="preload" href="css/index.css" as="style" onload="this.rel='stylesheet'">
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" type="image/png" href="images/favicon.ico">
+    <link rel="stylesheet" href="/css/remixicon.css">
+
 
 </head>
 <body>
