--- a/project.html
+++ b/project.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects | Qunoot Zehra</title>
+  <link rel="preload" href="css/index.css" as="style" onload="this.rel='stylesheet'">
     <link rel="stylesheet" href="css/index.css">
        <link rel="icon" type="image/png" href="images/favicon.ico">
+        <link rel="stylesheet" href="/css/remixicon.css">
 
 
 </head>
