--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section class="hero">
             
             <h1><span>Hi,I'm</span> Qunoot Zehra</h1>
-            <p class="title">I am a <span>Frontend Developer</span> </p>
+            <p class="title">I am a <span>Full Stack Developer</span> </p>
             <p class="hero-p">Creating fast, functional, and visually appealing websites. Focused on detail and performance.</p>
         <div class="hero-btns">
             <a href="project.html" class="btn">View My Work</a>
